Added some JVM args to allow for cross-app communication.